gsap overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 }
 
 body {
-  min-width: 320px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
