--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -9,6 +9,7 @@ body {
   align-items: center;
   flex-direction: column;
   color: white;
+  border: 3px solid red;
 }
 .home {
   h1,
@@ -16,6 +17,7 @@ body {
     margin-bottom: 24px;
   }
 }
+
 .button {
   display: flex;
   justify-content: center;
